--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <artifactId>javase</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <!--hutool工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
+        </dependency>
+
     </dependencies>
 
     <build>
