新增Thymeleaf，和确认前端部分静态资源路径问题

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
         <httpclient-version>4.5.6</httpclient-version>
         <commons-io-version>2.4</commons-io-version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -31,20 +30,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <!--version>1.18.28</version-->
             <version>edge-SNAPSHOT</version> <!--这个版本是关键-->
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -126,6 +122,10 @@
             <groupId>com.supcon.supos</groupId>
             <artifactId>eco-java-sdk</artifactId>
             <version>3.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 
