--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -98,4 +98,13 @@ app:
   path:
   ak: ${ak:415ed3fc72b533713244dcd553159642}
   sk: ${sk:10999785ab1c5f475c6d9c8b728e28a3}
+minio:
+  #endpoint: http://minio.default.svc.cluster.local:9000 #Minio服务所在地址
+  endpoint: http://10.104.96.59:9000 #Minio服务所在地址
+  #endpoint: http://localhost:9000 #Minio服务所在地址
+  bucketName: wenhao #存储桶名称
+  #accessKey: g6BkaFIwvWWZRN6UP0fd #访问的key
+  #secretKey: 46qwsFcO72W7vt9r6bGUi8Qkj11l0VxzspPowjCs #访问的秘钥
+  accessKey: minioadmin #访问的key
+  secretKey: minioadmin #访问的秘钥
 
