--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,11 +100,11 @@ app:
   sk: ${sk:10999785ab1c5f475c6d9c8b728e28a3}
 minio:
   #endpoint: http://minio.default.svc.cluster.local:9000 #Minio服务所在地址
-  endpoint: http://10.104.96.59:9000 #Minio服务所在地址
+  endpoint: http://office.unibutton.com:59000 #Minio服务所在地址
   #endpoint: http://localhost:9000 #Minio服务所在地址
   bucketName: wenhao #存储桶名称
   #accessKey: g6BkaFIwvWWZRN6UP0fd #访问的key
   #secretKey: 46qwsFcO72W7vt9r6bGUi8Qkj11l0VxzspPowjCs #访问的秘钥
-  accessKey: minioadmin #访问的key
-  secretKey: minioadmin #访问的秘钥
+  accessKey: IM5kMVqX8VJQQmMkQ0cL #访问的key
+  secretKey: MjLonwS3EMQmPU4pgBYG4WV1rjetjx9Kad9cjxd4 #访问的秘钥
 
