--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,11 @@ spring:
       idle-timeout: 30000
       max-lifetime: 1800000
       connection-timeout: 30000
+    sqlScriptEncoding: utf-8
+    initializationMode: always
+    schema: classpath:sql/schema.sql
+    data: classpath:sql/data.sql
+    continueOnError: true
   flyway:
     # 是否启用flyway
     enabled: true
