--- a/pom.xml
+++ b/pom.xml
@@ -183,11 +183,11 @@
         </plugins>
     </build>
 
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>projectlombok.org</id>-->
-<!--            <url>https://projectlombok.org/edge-releases</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
+    <repositories>
+        <repository>
+            <id>projectlombok.org</id>
+            <url>https://projectlombok.org/edge-releases</url>
+        </repository>
+    </repositories>
 
 </project>
