--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,7 +74,7 @@ spring:
     password:
   web:
     resources:
-      static-locations: file:///root/
+      static-locations: classpath:/static/, file:/root/
 mybatis-plus:
   #mapper-locations: classpath*:mapping/*Mapper.xml
   mapper-locations: classpath*:/mapper/**/*.xml
