--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8085
+  port: 8080
 #  ssl:
 #    key-alias: alias-key    #证书别名
 #    key-store-password: ddpeqs3p   #填写jks-password.txt文件内的密码。
@@ -32,7 +32,7 @@ spring:
     password: ${SUPOS_HOSTED_PASSWORD:root1234}
     # 数据库URL
     #url: jdbc:mysql://${SUPOS_HOSTED_HOST:192.168.31.220}:${SUPOS_HOSTED_PORT:3306}/${SUPOS_HOSTED_DBNAME:database}?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    url: jdbc:mysql://${SUPOS_HOSTED_HOST:office.unibutton.com}:${SUPOS_HOSTED_PORT:31874}/${SUPOS_HOSTED_DBNAME:database}?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://${SUPOS_HOSTED_HOST:office.unibutton.com}:${SUPOS_HOSTED_PORT:31874}/${SUPOS_HOSTED_DBNAME:database}?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 
     # 数据库驱动
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -48,8 +48,8 @@ spring:
       connection-timeout: 30000
     sqlScriptEncoding: utf-8
     initializationMode: always
-#    schema: classpath:sql/schema.sql
-#    data: classpath:sql/data.sql
+    schema: classpath:sql/schema.sql
+    data: classpath:sql/data.sql
     continueOnError: true
   flyway:
     # 是否启用flyway
