--- a/pom.xml
+++ b/pom.xml
@@ -176,8 +176,6 @@
             <groupId>com.supcon.supos</groupId>
             <artifactId>eco-java-sdk</artifactId>
             <version>3.2.3</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/eco-java-sdk-3.2.3.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -186,9 +184,28 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <includeSystemScope>true</includeSystemScope>
-                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>install-external-jar</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <file>${project.basedir}/src/main/resources/eco-java-sdk-3.2.3.jar</file>
+                            <groupId>com.supcon.supos</groupId>
+                            <artifactId>eco-java-sdk</artifactId>
+                            <version>3.2.3</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
