--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,8 @@
             <groupId>com.supcon.supos</groupId>
             <artifactId>eco-java-sdk</artifactId>
             <version>3.2.3</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/main/resources/eco-java-sdk-3.2.3.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -184,28 +186,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
-                <executions>
-                    <execution>
-                        <id>install-external-jar</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <file>${project.basedir}/src/main/resources/eco-java-sdk-3.2.3.jar</file>
-                            <groupId>com.supcon.supos</groupId>
-                            <artifactId>eco-java-sdk</artifactId>
-                            <version>3.2.3</version>
-                            <packaging>jar</packaging>
-                            <generatePom>true</generatePom>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
         </plugins>
     </build>
