--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
             <scope>system</scope>
             <systemPath>${pom.basedir}/src/main/resources/eco-java-sdk-3.2.3.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
