--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -118,4 +118,8 @@ minio:
   #secretKey: 46qwsFcO72W7vt9r6bGUi8Qkj11l0VxzspPowjCs #访问的秘钥
   accessKey: IM5kMVqX8VJQQmMkQ0cL #访问的key
   secretKey: MjLonwS3EMQmPU4pgBYG4WV1rjetjx9Kad9cjxd4 #访问的秘钥
-
+mqtt:
+  broker: ${MQTT_BROKER:tcp://47.236.10.165:30884}
+  clientId: ${MQTT_CLIENTID:wms_server}
+  topic_full: ${MQTT_TOPIC_FULL:wms_3dmodel_full}
+  topic_increment: ${MQTT_TOPIC_FULL:wms_3dmodel_increment}
