--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <commons-collections4-version>4.1</commons-collections4-version>
         <httpclient-version>4.5.6</httpclient-version>
         <commons-io-version>2.4</commons-io-version>
+        <skipTests>true</skipTests>
     </properties>
     <dependencies>
         <dependency>
